// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MobileAgentSearchBar clicking the close icon hides the search bar 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-searchBoxContainer--hidden"
  >
    <button
      aria-label="search"
      class="PodBrowser-root PodBrowser-root"
      data-testid="search-button"
      tabindex="0"
      type="button"
    >
      <span
        class="PodBrowser-label"
      >
        <i
          aria-label="search"
          class="PodBrowser-icon-search PodBrowser-iconSearch"
        />
      </span>
      <span
        class="PodBrowser-root"
      />
    </button>
    <div
      class="PodBrowser-root PodBrowser-searchInput--hidden PodBrowser-focused"
    >
      <input
        aria-label="Search by name or WebId"
        class="PodBrowser-input PodBrowser-searchInput--hidden"
        data-testid="mobile-search-input"
        placeholder="Search by name or WebId"
        type="text"
        value=""
      />
    </div>
    <button
      aria-label="close"
      class="PodBrowser-root PodBrowser-root PodBrowser-iconCloseHidden"
      data-testid="close-button"
      tabindex="0"
      type="button"
    >
      <span
        class="PodBrowser-label"
      >
        <i
          aria-label="close"
          class="PodBrowser-icon-cancel hidden"
        />
      </span>
      <span
        class="PodBrowser-root"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`MobileAgentSearchBar clicking the icon expands the search bar 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-searchBoxContainer--hidden"
  >
    <button
      aria-label="search"
      class="PodBrowser-root PodBrowser-root"
      data-testid="search-button"
      tabindex="0"
      type="button"
    >
      <span
        class="PodBrowser-label"
      >
        <i
          aria-label="search"
          class="PodBrowser-icon-search PodBrowser-iconSearch"
        />
      </span>
      <span
        class="PodBrowser-root"
      />
    </button>
    <div
      class="PodBrowser-root PodBrowser-searchInput--hidden PodBrowser-focused"
    >
      <input
        aria-label="Search by name or WebId"
        class="PodBrowser-input PodBrowser-searchInput--hidden"
        data-testid="mobile-search-input"
        placeholder="Search by name or WebId"
        type="text"
        value=""
      />
    </div>
    <button
      aria-label="close"
      class="PodBrowser-root PodBrowser-root PodBrowser-iconCloseHidden"
      data-testid="close-button"
      tabindex="0"
      type="button"
    >
      <span
        class="PodBrowser-label"
      >
        <i
          aria-label="close"
          class="PodBrowser-icon-cancel hidden"
        />
      </span>
      <span
        class="PodBrowser-root"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`MobileAgentSearchBar renders a search icon 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-searchBoxContainer--hidden"
  >
    <button
      aria-label="search"
      class="PodBrowser-root PodBrowser-root"
      data-testid="search-button"
      tabindex="0"
      type="button"
    >
      <span
        class="PodBrowser-label"
      >
        <i
          aria-label="search"
          class="PodBrowser-icon-search PodBrowser-iconSearch"
        />
      </span>
      <span
        class="PodBrowser-root"
      />
    </button>
    <div
      class="PodBrowser-root PodBrowser-searchInput--hidden PodBrowser-focused"
    >
      <input
        aria-label="Search by name or WebId"
        class="PodBrowser-input PodBrowser-searchInput--hidden"
        data-testid="mobile-search-input"
        placeholder="Search by name or WebId"
        type="text"
        value=""
      />
    </div>
    <button
      aria-label="close"
      class="PodBrowser-root PodBrowser-root PodBrowser-iconCloseHidden"
      data-testid="close-button"
      tabindex="0"
      type="button"
    >
      <span
        class="PodBrowser-label"
      >
        <i
          aria-label="close"
          class="PodBrowser-icon-cancel hidden"
        />
      </span>
      <span
        class="PodBrowser-root"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`MobileAgentSearchBar renders slightly different view with Groups UI enabled 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-searchBoxContainer--hidden PodBrowser-searchBoxContainer--can-be-hidden"
  >
    <button
      aria-label="search"
      class="PodBrowser-root PodBrowser-root"
      data-testid="search-button"
      tabindex="0"
      type="button"
    >
      <span
        class="PodBrowser-label"
      >
        <i
          aria-label="search"
          class="PodBrowser-icon-search PodBrowser-iconSearch"
        />
      </span>
      <span
        class="PodBrowser-root"
      />
    </button>
    <div
      class="PodBrowser-root PodBrowser-searchInput--hidden PodBrowser-focused"
    >
      <input
        aria-label="Search by name or WebId"
        class="PodBrowser-input PodBrowser-searchInput--hidden"
        data-testid="mobile-search-input"
        placeholder="Search by name or WebId"
        type="text"
        value=""
      />
    </div>
    <button
      aria-label="close"
      class="PodBrowser-root PodBrowser-root PodBrowser-iconCloseHidden"
      data-testid="close-button"
      tabindex="0"
      type="button"
    >
      <span
        class="PodBrowser-label"
      >
        <i
          aria-label="close"
          class="PodBrowser-icon-cancel hidden"
        />
      </span>
      <span
        class="PodBrowser-root"
      />
    </button>
  </div>
</DocumentFragment>
`;
